# Noogler

./: .gitignore  README.md  helper.txt
backend/: package-lock.json  package.json  pnpm-lock.yaml
backend/prompts/: system_prompt.txt
backend/src/: agent.ts  agentBackup.ts  db.ts  live-proxy.ts  server.ts  test-gemini.ts
client-rust/: Cargo.toml  build.rs
client-rust/scripts/: release-windows.ps1
client-rust/src/: client.rs  main.rs  tray.rs
frontend/: agents.html  chat.html  firebase.js  index.html  package.json  pnpm-lock.yaml  souls.html  vite.config.js  vite.config.js.timestamp-1773700427944-b757954ecd8c78.mjs
frontend/public/: manifest.webmanifest  pcm-processor.js  sw.js
frontend/src/chat/: App.svelte  OngoingCallOverlay.svelte  main.js
frontend/src/chat/components/: BrandCard.svelte  ChatList.svelte  ConnectionStatus.svelte  Feed.svelte  FooterInput.svelte  HeaderBar.svelte  MobilePanel.svelte  SettingsPanel.svelte  Sidebar.svelte
frontend/src/home/: main.js
frontend/src/shared/: styles.css
